Added image for vehicle
