# openapi.yaml
@@ -728,7 +728,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Advisor'
+                $ref: '#/components/schemas/Vehicle'
         400:
           $ref: '#/components/responses/BadRequest'
         403:
@@ -1031,6 +1031,9 @@ components:
         updatedAt:
           type: string
           example: '2019-12-07T17:00:46.694Z'
+        image:
+          type: string
+          example: 'https://example.com/link/to/image.png'
   responses:
     Unauthorized:
       description: Forbidden
